--- a/config/contra-env-setup.yml
+++ b/config/contra-env-setup.yml
@@ -48,7 +48,7 @@ cpus: "4"
 # Setup of influxDB, grafana, and
 influxdb_admin_password: admin
 influxdb_admin_user: admin
-influxdb_api_route: influxdb.contra-env-infra.svc.cluster.local:8086
+influxdb_api_route: "influxdb.{{ openshift_project }}.svc.cluster.local:8086"
 
 grafana_admin_password: admin
 grafana_admin_user: admin
